--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -12,6 +12,7 @@ html {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: 1.6rem;
