--- a/client/src/components/ImageUpload/ImageUpload.css
+++ b/client/src/components/ImageUpload/ImageUpload.css
@@ -11,7 +11,7 @@
 }
 
 .upload-files-container {
-	background-color: #f7fff7;
+	background-color: #3a5cd10a;
 	width: 420px;
 	padding: 30px 60px;
 	border-radius: 40px;
@@ -184,4 +184,15 @@
 	background-color: var(--theme-light);
 	cursor: not-allowed;
 	pointer-events: none;
+}
+
+.img-info{
+	border: 2px solid var(--theme);
+    border-radius: 40px;
+    margin: 10px 0 15px;
+    padding: 12px 18px;
+    width: 350px;
+    word-break: break-all; 
+    position: relative;
+    overflow: hidden; 
 }
