--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,13 +1,15 @@
 @import url("https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined");
-
-html {
-  font-size: 10px;
-  font-family: sans-serif;
-}
+@import url("https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&family=Montserrat:wght@400;500;700&family=Orbitron&family=Prompt:wght@400;500;700&display=swap");
 
 * {
   margin: 0;
   padding: 0;
+}
+
+
+html {
+  /* font-size: 24px; */
+  font-family: Dongle, sans-serif;
 }
 
 
