--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,10 +1,22 @@
-.navbar{
-    position: fixed;
+.navbar {
+    position: sticky;
     top: 0;
     width: 100%;
     font-size: 16px;
 }
 
-.navbar-brand{
+.navbar-brand {
     font-size: 16px;
+}
+
+.navbar-toggler {
+    width: 50px;
+}
+
+.navbar>.container-fluid {
+    flex-wrap: wrap;
+}
+
+nav{
+    z-index: 9999;
 }
